--- a/DAY 2/second.html
+++ b/DAY 2/second.html
@@ -36,7 +36,7 @@
         <option value="">virat kohli</option>
         <option value="">joe root</option>
         <option value="">kane williamson</option>
-        <option value="">steve smith</option>
+        <option value="">steve smith hiiii</option>
       </select>
 </body>
 </html>
