--- a/Day 1/first.html
+++ b/Day 1/first.html
@@ -60,7 +60,7 @@
         <table>
             <tr>
                 <th>heading 1</th>
-                <th>headiong 2</th>
+                <th>heading 2</th>
                 <th>heading 3</th>
             </tr>
 
