--- a/MERN/design.html
+++ b/MERN/design.html
@@ -8,7 +8,8 @@
     body{
         align-items: center;
         display: flex;
-        justify-content: center;              
+        justify-content: center; 
+        height: 100vh;             
     }
     h1{
       color: lightcoral;
