--- a/MERN/frame.html
+++ b/MERN/frame.html
@@ -8,6 +8,9 @@
     body{
         align-items: center;
         height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     .inner{
         height: 400px;
