--- a/Day 7/index.html
+++ b/Day 7/index.html
@@ -51,7 +51,7 @@
             </div>
             <div class="w-[50%] bg-pink-300 h-full flex justify-center items-center">
                 <div class="">
-                    <img src="https://mfiles.alphacoders.com/986/thumb-1920-986940.jpg" alt="" class="rounded-[30%] w-[400px] h-[500px]">
+                    <img src="https://mfiles.alphacoders.com/986/thumb-1920-986940.jpg" alt="" class="rounded-[30%] w-[400px] h-[500px] border-4 border-black shadow-[5px_5px_10px_black]">
                 </div>
             </div>
         </section>
